--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,8 @@
                 <li><a class="active" href="index.html">home</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="about.html">about us</a></li>
-                <li><a href="contact.html">contact</a></li>              
+                <li><a href="contact.html">contact</a></li>   
+                <li><a href="Sign-in.html">Sign-in</a></li>           
 
             </ul>
         </div>
