--- a/Sign-in.html
+++ b/Sign-in.html
@@ -7,7 +7,8 @@
   <link rel="stylesheet" href="style.css">
   <title>Document</title>
 </head>
-<body id="Sign-in">
+<body>
+
   <div class="main">
     <input type="checkbox" id="chk" aria-hidden="true">
     <div class="signup">
@@ -29,5 +30,6 @@
         <button>Login</button>
       </form>
   </div>
+
 </body>
 </html>
